# advent-of-code-2024

./: aoc2024.cabal
app/: Main.hs
src/: Day01.hs  Day02.hs  Day03.hs
