cabal-version: 3.0
name:          aoc2024
version:       0.1.0.0
build-type:    Simple
author:        Leslie Barron
license:       NONE

library
  exposed-modules:
    Day01
  build-depends:
    base ^>=4.17,
    split
  hs-source-dirs:   src
  default-language: Haskell2010

executable aoc2024
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    base ^>=4.17,
    aoc2024
  default-language: Haskell2010

