cabal-version: 3.0
name:          aoc2024
version:       0.1.0.0
author:        Leslie Barron
build-type:    Simple

library
    exposed-modules:
        Day01
        Day02
        Day03

    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base ^>=4.17,
        regex-tdfa ^>=1.3.2

executable aoc2024
    main-is:          Main.hs
    hs-source-dirs:   app
    default-language: Haskell2010
    build-depends:
        base ^>=4.17,
        aoc2024
